@@ -57,10 +57,8 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
 
 #ifdef unix
   If \code{method = "auto"} is chosen (the default), on a Unix-alike
-  method \code{"libcurl"} is chosen for \samp{https://} and
-  \samp{ftps://} URLs and the \code{"internal"} method is chosen for
-  other schemes.  If redirection from \samp{http://} to \samp{https://}
-  is encountered, the download is re-tried with method \code{"libcurl"}.
+  method \code{"libcurl"} is used except \code{"internal"} for
+  \samp{file://} URLs.
 #endif
 #ifdef windows
   If \code{method = "auto"} is chosen (the default), on Windows the
@@ -85,8 +83,9 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
   (non-blocking) access to \samp{https://} and (usually) \samp{ftps://}
   URLs.  There is support for simultaneous downloads, so \code{url} and
   \code{destfile} can be character vectors of the same length greater
-  than one.  For a single URL and \code{quiet = FALSE} a progress
-  bar is shown in interactive use.
+  than one (but the method has to be specified explicitly and not
+  \emph{via} \code{"auto"}).  For a single URL and \code{quiet = FALSE}
+  a progress bar is shown in interactive use.
 
   For methods \code{"wget"} and \code{"curl"} a system call is made to
   the tool given by \code{method}, and the respective program must be
@@ -105,7 +104,8 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
   redirections only.  (For method \code{"curl"} use argument \code{extra
   = "-L"}.  To disable redirection in \command{wget}, use \code{extra =
   "--max-redirect=0"}.)  The \code{"wininet"} method supports some
-  redirections but not all.
+  redirections but not all.  (For method \code{"libcurl"}, messages will
+  quote the endpoint of redirections.)
   
   Note that \samp{https://} URLs are not supported by the
   \code{"internal"} method but are supported by the \code{"libcurl"}
@@ -118,7 +118,7 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
   does not support them.
 
   Most methods do not percent-encode special characters such as spaces
-  in HTTP URLs (see \code{\link{URLencode}}), but it seems the
+  in URLs (see \code{\link{URLencode}}), but it seems the
   \code{"wininet"} method does.
 
   The remaining details apply to the \code{"internal"}, \code{"wininet"}
@@ -280,6 +280,12 @@ download.file(url, destfile, method, quiet = FALSE, mode = "w",
   failure.  For the \code{"wget"} and \code{"curl"} methods this is the
   status code returned by the external program.  The \code{"internal"}
   method can return \code{1}, but will in most cases throw an error.
+
+  What happens to the destination file(s) in the case of error depends
+  on the method and \R{} version. Currently the \code{"internal"},
+  \code{"wininet"} and \code{"libcurl"} methods will remove the file if
+  there the URL is unavailable except when \code{mode} specifies
+  appending when the file should be unchanged.
 }
 \seealso{
   \code{\link{options}} to set the \code{HTTPUserAgent}, \code{timeout}
